@@ -5,6 +5,8 @@ Changes
 4.0.0 (unreleased)
 ------------------
 
+- Dropped hard testing dependency on ``zope.testing``.
+
 - Added explicit support for PyPy.
 
 - Added explicit support for Python 3.2.
